# data-app-demo

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
data/agg/: daily_carrier.parquet  daily_overall.parquet  monthly_carrier_cause.parquet  monthly_cause.parquet  monthly_dest.parquet  monthly_od.parquet  monthly_origin.parquet
data/lookup/: airports.parquet  carriers.parquet  states.parquet
pages/: airline_researcher.py  flight_planner.py  overview.py
scripts/: build_data.py
utils/: data.py  geo.py
